Added fogofwarunit to the town hall and worker

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -77,6 +77,7 @@
      <Compile Include="Assets\Scripts\Buildings\BuildingButton.cs" />
      <Compile Include="Assets\Scripts\Combat\Spell.cs" />
      <Compile Include="Assets\Scripts\Game\Computer AI\ComputerAI.cs" />
+     <Compile Include="Assets\Scripts\Game\Computer AI\PlayerAI.cs" />
      <Compile Include="Assets\Scripts\Cameras\FaceCamera.cs" />
      <Compile Include="Assets\Scripts\Networking\RTSNetworkManager.cs" />
      <Compile Include="Assets\Scripts\Cameras\Minimap.cs" />
@@ -102,6 +103,7 @@
      <Compile Include="Assets\Scripts\Inputs\Controls.cs" />
      <Compile Include="Assets\Scripts\Research\TechTree.cs" />
      <Compile Include="Assets\Scripts\Units\UnitCommandGiver.cs" />
+     <Compile Include="Assets\Scripts\Game\Computer AI\UnitAI.cs" />
      <Compile Include="Assets\Scripts\Lighting\DayNightCycle.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\UnitRank.cs" />
      <Compile Include="Assets\Scripts\Menus\Lobby\RemoveComputerPlayerButton.cs" />
@@ -109,14 +111,45 @@
      <Compile Include="Assets\Scripts\Resources\ResourceDropOff.cs" />
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\Resources.cs" />
-     <Compile Include="Assets\Scripts\Game\Computer AI\PlayerAI.cs" />
-     <Compile Include="Assets\Scripts\Game\Computer AI\UnitAI.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarChunkManager.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarTeam.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawer.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarClearFog.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarBlur.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarFogFill.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarUnit.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWar3DMinimapIcon.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarPostProcessManager.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarEvents.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test2D\FogOfWar2DTest.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURP.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURPPass.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarConversion.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Legacy\FogOfWarTestLegacy.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawerSoftware.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test2D\FogOfWar2DSimpleAnimator.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURPFeature.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\HideInFog.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarColliderRect.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\FogOfWarDemo.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawerHardware.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWar3DTest.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\URP\FogOfWarTestURP.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarThreadPool.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarMinimap.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\PPSv2\FogOfWarTestPPSv2.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarMap.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarShape.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarUtils.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
+     <None Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Stones.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Ground_Blending.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\MobileShader\beffio_Mobile.shader" />
+     <None Include="Assets\Imported\FogOfWar\Core\FogOfWarUtils.cginc" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Trees.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
@@ -133,23 +166,31 @@
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile SSD.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Resources\LineBreaking Leading Characters.txt" />
+     <None Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\BasicLighting.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro_Properties.cginc" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro_Surface.cginc" />
      <None Include="Assets\Imported\Toon_RTS\WesternKingdoms\Toon RTS Units - Latest update.txt" />
      <None Include="Assets\Mirror\Notice.txt" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\MobileShader\beffio_Water_Mobile.shader" />
+     <None Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWarUnlit.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_BaseShader.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Resources\LineBreaking Following Characters.txt" />
      <None Include="Assets\Imported\Toon_RTS\Undead\Toon RTS Units - Latest update.txt" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Shafts.shader" />
      <None Include="Assets\Mirror\Plugins\Mono.Cecil\License.txt" />
+     <None Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURP.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Fabric.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Masking.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF Overlay.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_Bitmap-Mobile.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Fonts\LiberationSans - OFL.txt" />
+     <None Include="Assets\Imported\FogOfWar\Samples\CustomFogShader.shader" />
+     <None Include="Assets\Imported\FogOfWar\Core\FogOfWarBlurShader.shader" />
+     <None Include="Assets\Imported\FogOfWar\Core\TransparentShadowCaster.shader" />
+     <None Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWarClouds.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Vegetation.shader" />
+     <None Include="Assets\Imported\FogOfWar\Core\FogOfWarHardware.shader" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_Sprite.shader" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.14f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
