--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -36,16 +36,26 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarChunkManager.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarTeam.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawer.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarClearFog.cs" />
      <Compile Include="Assets\Scripts\Resources\ResourceNode.cs" />
      <Compile Include="Assets\Scripts\Units\EnemyDetection.cs" />
      <Compile Include="Assets\Scripts\Inputs\CursorHit.cs" />
      <Compile Include="Assets\Scripts\Menus\Lobby\AddComputerPlayerButton.cs" />
      <Compile Include="Assets\Scripts\Combat\Health.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\UI\bl_LoadingScreenUI.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarBlur.cs" />
      <Compile Include="Assets\Scripts\UI\Cursors.cs" />
      <Compile Include="Assets\Scripts\Units\SpellCaster.cs" />
      <Compile Include="Assets\Imported\beffio\Medieval Kingdom\Content\Scripts\ExplodePart.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarFogFill.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Example\Script\bl_LoadingScreenExample.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.cs" />
      <Compile Include="Assets\Scripts\Menus\MainMenu.cs" />
      <Compile Include="Assets\Scripts\Menus\PauseMenu.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Enum\LoadingType.cs" />
      <Compile Include="Assets\Imported\beffio\Medieval Kingdom\Content\Scripts\Reflection_pass.cs" />
      <Compile Include="Assets\Scripts\Units\UnitInformation.cs" />
      <Compile Include="Assets\Scripts\Combat\Targeter.cs" />
@@ -58,90 +68,93 @@
      <Compile Include="Assets\Scripts\Units\UnitProjectile.cs" />
      <Compile Include="Assets\Scripts\Cameras\CameraController.cs" />
      <Compile Include="Assets\Scripts\Units\UnitFiring.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\ReorderableList\ReorderableArray.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarUnit.cs" />
      <Compile Include="Assets\Scripts\Combat\Spells\Firestorm.cs" />
      <Compile Include="Assets\Scripts\Research\Technology.cs" />
      <Compile Include="Assets\Scripts\Units\UnitSelectionHandler.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWar3DMinimapIcon.cs" />
      <Compile Include="Assets\Scripts\UI\UnitButton.cs" />
      <Compile Include="Assets\Scripts\UI\Buttons.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\UnitType.cs" />
      <Compile Include="Assets\Scripts\Units\ConstructionDuty.cs" />
      <Compile Include="Assets\Scripts\Buildings\UnitBase.cs" />
      <Compile Include="Assets\Scripts\Menus\JoinLobbyMenu.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\Utils\bl_TriggerLoad.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarPostProcessManager.cs" />
      <Compile Include="Assets\Scripts\Buildings\UnitSpawner.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarEvents.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test2D\FogOfWar2DTest.cs" />
      <Compile Include="Assets\Scripts\Menus\GameOverDisplay.cs" />
      <Compile Include="Assets\Imported\beffio\Medieval Kingdom\Content\Scripts\Float_on_water.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURP.cs" />
      <Compile Include="Assets\Scripts\Game\GameobjectLists.cs" />
      <Compile Include="Assets\Scripts\Combat\HealthDisplay.cs" />
      <Compile Include="Assets\Scripts\Game\PooledGameobjects.cs" />
      <Compile Include="Assets\Scripts\Combat\Targetable.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURPPass.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarConversion.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Legacy\FogOfWarTestLegacy.cs" />
      <Compile Include="Assets\Scripts\Buildings\BuildingButton.cs" />
      <Compile Include="Assets\Scripts\Combat\Spell.cs" />
      <Compile Include="Assets\Scripts\Game\Computer AI\ComputerAI.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawerSoftware.cs" />
      <Compile Include="Assets\Scripts\Game\Computer AI\PlayerAI.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test2D\FogOfWar2DSimpleAnimator.cs" />
      <Compile Include="Assets\Scripts\Cameras\FaceCamera.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURPFeature.cs" />
      <Compile Include="Assets\Scripts\Networking\RTSNetworkManager.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Global\bl_SceneLoaderUtils.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\Main\bl_SceneLoader.cs" />
      <Compile Include="Assets\Scripts\Cameras\Minimap.cs" />
      <Compile Include="Assets\Scripts\Buildings\Building.cs" />
      <Compile Include="Assets\Scripts\Menus\UIController.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\HideInFog.cs" />
      <Compile Include="Assets\Scripts\Menus\LobbyMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\ResourceGatherer.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarColliderRect.cs" />
      <Compile Include="Assets\Scripts\Networking\TeamColorSetter.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\ActionList.cs" />
      <Compile Include="Assets\Scripts\Buildings\ResourceGenerator.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\FogOfWarDemo.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\ArmourType.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\ReorderableList\Attributes\ReorderableLovattoAttribute.cs" />
      <Compile Include="Assets\Scripts\Game\SpellHandler.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawerHardware.cs" />
      <Compile Include="Assets\Scripts\Resources\ResourceTypes\Resource.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\Utils\bl_ButtonSceneLoad.cs" />
      <Compile Include="Assets\Scripts\Units\UnitTask.cs" />
      <Compile Include="Assets\Scripts\Buildings\BuildingPlacementHandler.cs" />
      <Compile Include="Assets\Scripts\Buildings\GameOverHandler.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Enum\bl_SceneLoaderSkip.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWar3DTest.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\WeaponType.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\URP\FogOfWarTestURP.cs" />
      <Compile Include="Assets\Scripts\Resources\ResourcesDisplay.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarThreadPool.cs" />
      <Compile Include="Assets\Scripts\Units\UnitMovement.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarMinimap.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Samples\PPSv2\FogOfWarTestPPSv2.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\Main\bl_SceneLoaderManager.cs" />
      <Compile Include="Assets\Scripts\Buildings\Foundation.cs" />
      <Compile Include="Assets\Scripts\Units\Spells\SpellList.cs" />
      <Compile Include="Assets\Imported\beffio\Medieval Kingdom\Content\Scripts\TreeSwinger.cs" />
      <Compile Include="Assets\Scripts\Inputs\Controls.cs" />
      <Compile Include="Assets\Scripts\Research\TechTree.cs" />
      <Compile Include="Assets\Scripts\Units\UnitCommandGiver.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarMap.cs" />
      <Compile Include="Assets\Scripts\Game\Computer AI\UnitAI.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Structures\bl_SceneLoaderInfo.cs" />
      <Compile Include="Assets\Scripts\Lighting\DayNightCycle.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarShape.cs" />
+     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarUtils.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\UnitRank.cs" />
      <Compile Include="Assets\Scripts\Menus\Lobby\RemoveComputerPlayerButton.cs" />
      <Compile Include="Assets\Scripts\UI\Buttons\SpellButton.cs" />
      <Compile Include="Assets\Scripts\Resources\ResourceDropOff.cs" />
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
-     <Compile Include="Assets\Scripts\Resources\Resources\Resources.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarChunkManager.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarTeam.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawer.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarClearFog.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarBlur.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarFogFill.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarUnit.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWar3DMinimapIcon.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarPostProcessManager.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarEvents.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test2D\FogOfWar2DTest.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURP.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURPPass.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarConversion.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Samples\Legacy\FogOfWarTestLegacy.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawerSoftware.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test2D\FogOfWar2DSimpleAnimator.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURPFeature.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\HideInFog.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarColliderRect.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Samples\FogOfWarDemo.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarDrawerHardware.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWar3DTest.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Samples\URP\FogOfWarTestURP.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarThreadPool.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarMinimap.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Samples\PPSv2\FogOfWarTestPPSv2.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarMap.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarShape.cs" />
-     <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarUtils.cs" />
+     <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
+     <Compile Include="Assets\Scripts\Game\Events\GameEvents.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.shader" />
@@ -157,6 +170,7 @@
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Water.shader" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\How to Start &amp; Documentation.txt" />
+     <None Include="Assets\Imported\Loading Screen\ReadMe.txt" />
      <None Include="Assets\Mirror\Version.txt" />
      <None Include="Assets\Mirror\Readme.txt" />
      <None Include="Assets\Imported\beffio\Medieval Kingdom\Content\Shaders\beffio_Parallax.shader" />
@@ -818,6 +832,10 @@
     <ProjectReference Include="Mirror.Weaver.csproj">
       <Project>{b460aeac-a295-7efa-4fa7-c491ccc36c45}</Project>
       <Name>Mirror.Weaver</Name>
+    </ProjectReference>
+    <ProjectReference Include="LoadingScreen.Misc.csproj">
+      <Project>{d45e29ba-1e9f-555d-d3b0-307fed3f14cb}</Project>
+      <Name>LoadingScreen.Misc</Name>
     </ProjectReference>
     <ProjectReference Include="Mirror.Authenticators.csproj">
       <Project>{8f08c81f-14b7-5768-f956-7fe1ba8cd4f8}</Project>
