--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -39,6 +39,12 @@
      <Compile Include="Assets\Editor\ExplodePartEditor.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\Editor\FogOfWarChunkManagerEditor.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\Editor\FogOfWarTeamEditor.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\ReorderableList\Editor\ReorderableDrawer.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Editor\bl_LoadingScreenStartUp.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Editor\bl_SceneLoaderEditor.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Editor\bl_LoadingScreenWelcome.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\ReorderableList\Editor\ReorderableList.cs" />
+     <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Editor\LoadingScreenDocumentation.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.14f1/Editor/Data/Managed/UnityEngine/UnityEngine.dll</HintPath>
     </Reference>
@@ -248,6 +254,9 @@
     </Reference>
     <Reference Include="ICSharpCode.NRefactory">
         <HintPath>C:/Users/danie/Desktop/Coding/Unity Projects/MP Basics/RealTimeStrategy/Library/PackageCache/com.unity.render-pipelines.core@8.2.0/Editor/ShaderGenerator/ICSharpCode.NRefactory.dll</HintPath>
+    </Reference>
+    <Reference Include="TutorialWizardLoadingScreen">
+        <HintPath>C:/Users/danie/Desktop/Coding/Unity Projects/MP Basics/RealTimeStrategy/Assets/Imported/Loading Screen/Content/Scripts/Internal/Editor/TutorialWizardLoadingScreen.dll</HintPath>
     </Reference>
     <Reference Include="mscorlib">
         <HintPath>C:/Program Files/Unity/Hub/Editor/2020.1.14f1/Editor/Data/MonoBleedingEdge/lib/mono/4.7.1-api/mscorlib.dll</HintPath>
@@ -730,6 +739,10 @@
     <ProjectReference Include="SimpleWebTransport.csproj">
       <Project>{9a4c3a67-56ec-7fd1-1abd-7fc266133176}</Project>
       <Name>SimpleWebTransport</Name>
+    </ProjectReference>
+    <ProjectReference Include="LoadingScreen.Misc.csproj">
+      <Project>{d45e29ba-1e9f-555d-d3b0-307fed3f14cb}</Project>
+      <Name>LoadingScreen.Misc</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
