--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -127,11 +127,13 @@
      <Compile Include="Assets\Scripts\Resources\ResourceTypes\Resource.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Runtime\Utils\bl_ButtonSceneLoad.cs" />
      <Compile Include="Assets\Scripts\Units\UnitTask.cs" />
+     <Compile Include="Assets\Huntable.cs" />
      <Compile Include="Assets\Scripts\Buildings\BuildingPlacementHandler.cs" />
      <Compile Include="Assets\Scripts\Buildings\GameOverHandler.cs" />
      <Compile Include="Assets\Imported\Loading Screen\Content\Scripts\Internal\Enum\bl_SceneLoaderSkip.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Samples\Assets\Test3D\FogOfWar3DTest.cs" />
      <Compile Include="Assets\Scripts\Units\Tasks\WeaponType.cs" />
+     <Compile Include="Assets\Scripts\Units\Type AddOns\TreeFall.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Samples\URP\FogOfWarTestURP.cs" />
      <Compile Include="Assets\Scripts\Resources\ResourcesDisplay.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\FogOfWarThreadPool.cs" />
@@ -159,8 +161,7 @@
      <Compile Include="Assets\Scripts\Resources\ResourceDropOff.cs" />
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
-     <Compile Include="Assets\Huntable.cs" />
-     <Compile Include="Assets\Scripts\Units\Type AddOns\TreeFall.cs" />
+     <Compile Include="Assets\Scripts\Units\Type AddOns\Necromancer.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.shader" />
