--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -92,6 +92,7 @@
      <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURP.cs" />
      <Compile Include="Assets\Scripts\Game\GameobjectLists.cs" />
      <Compile Include="Assets\Scripts\Combat\HealthDisplay.cs" />
+     <Compile Include="Assets\Scripts\Units\Type AddOns\Necromancer.cs" />
      <Compile Include="Assets\Scripts\Game\PooledGameobjects.cs" />
      <Compile Include="Assets\Scripts\Combat\Targetable.cs" />
      <Compile Include="Assets\Imported\FogOfWar\Core\URP\FogOfWarURPPass.cs" />
@@ -161,7 +162,7 @@
      <Compile Include="Assets\Scripts\Resources\ResourceDropOff.cs" />
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
-     <Compile Include="Assets\Scripts\Units\Type AddOns\Necromancer.cs" />
+     <Compile Include="Assets\Scripts\Combat\Spells\SpellEffect.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.shader" />
