--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -163,6 +163,8 @@
      <Compile Include="Assets\Scripts\Menus\OptionsMenu.cs" />
      <Compile Include="Assets\Scripts\Resources\Resources\ResourceManager.cs" />
      <Compile Include="Assets\Scripts\Combat\Spells\SpellEffect.cs" />
+     <Compile Include="Assets\Scripts\Units\Unit Assignments\ClearDeadDuty.cs" />
+     <Compile Include="Assets\Scripts\Units\Type AddOns\Corpse.cs" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMPro.cginc" />
      <None Include="Assets\Imported\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
      <None Include="Assets\Imported\FogOfWar\Core\Legacy\FogOfWarLegacy.shader" />
